--- a/Todo/Todo.csproj
+++ b/Todo/Todo.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
