--- a/Todo.Blazor.Test/Todo.Blazor.Test.csproj
+++ b/Todo.Blazor.Test/Todo.Blazor.Test.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Todo\Todo.Blazor.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\" />
+  </ItemGroup>
+
 </Project>
